--- a/styles.css
+++ b/styles.css
@@ -365,7 +365,14 @@ footer {
   background-color: var(--primary-color);
   color: var(--clr-white);
   font-size: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box; /* Ensure padding is included in width calculation */
 }
+
 
 @media screen and (max-width: 800px) {
   /* Index page */
